1998-10-28  Jim Meyering  <meyering@ascend.com>

	* Version 1.5.

1998-10-09  Jim Meyering  <meyering@ascend.com>

	* cppi.l (main, usage): Remove and undocument DISABLE_CPP_INDENT_CHECK
	envvar support.

1998-10-02  Jim Meyering  <meyering@ascend.com>

	* Makefile.am (CLEANFILES): Add lex.backup.

	* Version 1.4.

	Line numbers in diagnostics were off -- sometimes by a lot.
	Reported by Tim Lynch.
	* cppi.l (gobble_define): Count newlines.
	Adjust caller.
	* tests/Makefile.am (TESTS): Add d5.
	* tests/d5: New file -- test for the above fix.

	* tests/stringify-2: Adjust line numbers.

1998-09-09  Jim Meyering  <meyering@ascend.com>

	* cppi.l (lookup_cpp_keyword): Declare function to be static.

1998-09-08  Jim Meyering  <meyering@ascend.com>

	* Makefile.am (cpp.h): Generate declarations of `enum Eic_type'
	and the `directive' array of strings.
	(BUILT_SOURCES): Add cpp.h.

	* cppi.l: Include cpp.h here in place of hard-coded dcls.
	(emit_indented_cpp): Don't use gcc extension for struct initialization.

	* cppi.l: Remove and undocument kludgey --cvs (-C) option.
	* tests/Makefile.am (TESTS): Remove f6 (used -C).

1998-09-02  Jim Meyering  <meyering@ascend.com>

	* Makefile.maint: New file.
	* GNUmakefile: New file.
	* Makefile.am (EXTRA_DIST): Add GNUmakefile and Makefile.maint.

1998-09-01  Jim Meyering  <meyering@ascend.com>

	* configure.in (VERSION): Bump to 1.3.

	* Makefile.am (flex_8_bit): New variable.
	(LFLAGS): Include it here.
	* tests/8-bit: New file.
	* tests/Makefile.am (TESTS): Add 8-bit.

1998-08-01  Jim Meyering  <meyering@ascend.com>

	* configure.in: Bump version to 1.2.

	* cppi.l (gobble_define): New function.
	Call it for every #define directive.

	Tests for the above.
	* tests/stringify-1: New file.
	* tests/stringify-2: New file.
	* tests/stringify-3: New file.
	* tests/stringify-4: New file.
	* tests/Makefile.am (TESTS): Add new tests.

1998-04-08  Jim Meyering  <meyering@ascend.com>

	* configure.in: Bump version from 1.1a to 1.1b.
